SV-36 unit test energy consumption